--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="app_name">Seismic</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Ouvrir le vote de navigation</string>
+    <string name="navigation_drawer_close">Fermet le volet de navigation</string>
 
     <string name="action_settings">Paramètres</string>
 
@@ -13,12 +13,12 @@
     <string name="title_activity_fullscreen_map">Lieu du séisme</string>
     <string name="Loading">Chargement des séismes ...</string>
     <string name="founded_seisms">%d séismes trouvés !</string>
-    <string name="action_sort_mag">Sort by magnitude</string>
-    <string name="action_sort_time">Sort by date</string>
-    <string name="action_sort_mag_min">Sort by mag.</string>
-    <string name="action_sort_time_min">Sort by dat.</string>
-    <string name="action_sort_mag_descend">Sort by magnitude descending</string>
-    <string name="action_sort_mag_descend_min">Sort by mag. desc.</string>
-    <string name="action_sort_time_desc">Sort by date descending</string>
-    <string name="action_sort_time_desc_min">Sort by date desc.</string>
+    <string name="action_sort_mag">Trier par magnitude</string>
+    <string name="action_sort_time">Trier par date</string>
+    <string name="action_sort_mag_min">Trier par mag.</string>
+    <string name="action_sort_time_min">Trier par dat.</string>
+    <string name="action_sort_mag_descend">Trier par magnitude décroissante</string>
+    <string name="action_sort_mag_descend_min">Trier par mag. déc.</string>
+    <string name="action_sort_time_desc">Trier par date décroissante</string>
+    <string name="action_sort_time_desc_min">Trier par date déc.</string>
 </resources>
